# imdb_dagster

./: .gitignore  README.md  notes.md  pyproject.toml  requirements.txt  test.ipynb
data/inputs/handmade_files/: date_scores.csv  status.csv
data/outputs/: watch_list.html  watch_list.xlsx
data/products/: watch_list.html  watch_list.xlsx
data/status/: date_scores.csv
src/imdb_dagster/: helpers.py  helpers.py.txt  helpers_backup.py
src/imdb_dagster/defs/assets/: checks.py  constants.py  ingestion.py  inputs.py  jobs.py  products.py  schedules.py  sensors.py  transformation.py
src/imdb_dagster/defs/assets/data_assets/: inputs.py  intermediates.py  outputs.py  products.py  raw_inputs.py  transformation.py
