[project]
name = "imdb_dagster"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "bokeh>=3.8.2",
    "dagster==1.12.8",
    "dagster-pandas>=0.28.8",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "imdb_dagster"
registry_modules = [
    "imdb_dagster.components.*",
]


